<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">BLOPUP</string>
    <string name="organization_name" translatable="false">BLOPUP</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="action_logout" tools:ignore="MissingTranslation">Logout</string>
    <string name="action_location" tools:ignore="MissingTranslation">Location</string>
    <string name="snackbar_nonvisitting_patients" tools:ignore="MissingTranslation">Vital signs can only be captured in patients with an active visit.</string>
    <string name="no_death_concepts_in_server" tools:ignore="MissingTranslation">Please, add the possible causes of death on the server</string>
    <string name="admission_provider_role" tools:ignore="MissingTranslation">Provider role:</string>
    <string name="alphanumeric_postal_code" tools:ignore="MissingTranslation">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 </string>
    <string name="login_button" tools:ignore="MissingTranslation">Login</string>
    <string name="login_username_hint" tools:ignore="MissingTranslation">Username</string>
    <string name="login_password_hint" tools:ignore="MissingTranslation">Password</string>
    <string name="login_location_select" tools:ignore="MissingTranslation">Session location</string>
    <string name="req_star" tools:ignore="MissingTranslation"><![CDATA[<font color=\'#616161\'> * </font>]]></string>
    <string name="warning_dialog_title" tools:ignore="MissingTranslation">Warning</string>
    <string name="warning_lost_data_dialog" tools:ignore="MissingTranslation">Changing the URL, username or password will erase all the data. Are you sure?</string>
    <string name="forgot_button_ok" tools:ignore="MissingTranslation">Dismiss</string>
    <string name="login_online" translatable="false">Online</string>
    <string name="emptyerror" tools:ignore="MissingTranslation">Required</string>
    <string name="choose_option_error" tools:ignore="MissingTranslation">Please, choose an option</string>
    <string name="choose_options_error" tools:ignore="MissingTranslation">Please, choose at least one option</string>
    <string name="fname_invalid_error" tools:ignore="MissingTranslation">Given name cannot contain symbols or numbers</string>
    <string name="empty_value" tools:ignore="MissingTranslation">\u0020</string>
    <string name="midname_invalid_error" tools:ignore="MissingTranslation">Middle name cannot contain symbols or numbers</string>
    <string name="lname_invalid_error" tools:ignore="MissingTranslation">Family name cannot contain symbols or numbers</string>
    <string name="dob_error" tools:ignore="MissingTranslation">Date should be between %1$s and %2$s</string>
    <string name="reg_firstname_hint" tools:ignore="MissingTranslation">Name*</string>
    <string name="reg_contact_firstname_hint" tools:ignore="MissingTranslation">First Name</string>
    <string name="reg_midname_hint" tools:ignore="MissingTranslation">Middle Name</string>
    <string name="reg_surname_hint" tools:ignore="MissingTranslation">Family name*</string>
    <string name="reg_document_id_hint" tools:ignore="MissingTranslation">Document ID</string>
    <string name="reg_phone_number_hint" tools:ignore="MissingTranslation">Phone number</string>
    <string name="reg_ques_name" tools:ignore="MissingTranslation">Patient\’s name</string>
    <string name="reg_ques_gender" tools:ignore="MissingTranslation">Patient\'s gender*</string>
    <string name="reg_ques_dob" tools:ignore="MissingTranslation">Patient\'s birth date*</string>
    <string name="label_or" tools:ignore="MissingTranslation">Or</string>
    <string name="country_of_birth_label" tools:ignore="MissingTranslation">Country of birth*</string>
    <string name="addr1_hint" tools:ignore="MissingTranslation">Address Line 1</string>
    <string name="addr2_hint" tools:ignore="MissingTranslation">Address Line 2</string>
    <string name="addr_invalid_error" tools:ignore="MissingTranslation">Address cannot contain invalid characters.</string>
    <string name="atleastone" tools:ignore="MissingTranslation">Fill at least one address field</string>
    <string name="male" tools:ignore="MissingTranslation">Male</string>
    <string name="female" tools:ignore="MissingTranslation">Female</string>
    <string name="non_binary" tools:ignore="MissingTranslation">Non binary</string>
    <string name="dob_hint" tools:ignore="MissingTranslation">Date of birth (dd/mm/yyyy)</string>
    <string name="estyr" tools:ignore="MissingTranslation">Estimated years</string>
    <string name="age_out_of_bounds_message" tools:ignore="MissingTranslation">Patient\'s age must be between 0 and 120</string>
    <string name="register_patient_error" tools:ignore="MissingTranslation">Something went wrong and the patient has not been created. Please, try again.</string>
    <string name="update_patient_success" tools:ignore="MissingTranslation">Patient %s updated</string>
    <string name="update_patient_error" tools:ignore="MissingTranslation">Patient %s cannot be updated due to server error</string>
    <string name="auth_failed_dialog_message" tools:ignore="MissingTranslation">Incorrect username or password entered. Please try again.</string>
    <string name="similar_patients_dialog_title" tools:ignore="MissingTranslation">Similar patients found</string>
    <string name="logout_dialog_title" tools:ignore="MissingTranslation">Logging Out</string>
    <string name="logout_dialog_message" tools:ignore="MissingTranslation">Are you sure you want to logout?</string>
    <string name="logout_dialog_button" tools:ignore="MissingTranslation">Logout</string>
    <string name="credentials_changed_dialog_title" tools:ignore="MissingTranslation">Credentials changed</string>
    <string name="credentials_changed_dialog_message" tools:ignore="MissingTranslation">Your credentials have been changed in the web app. You are logged out automatically.</string>
    <string name="end_visit_dialog_title" tools:ignore="MissingTranslation">End visit</string>
    <string name="end_visit_dialog_message" tools:ignore="MissingTranslation">Are you sure you want to end this visit?</string>
    <string name="start_visit_dialog_title" tools:ignore="MissingTranslation">Start Visit</string>
    <string name="start_visit_dialog_message" tools:ignore="MissingTranslation">Are you sure you want to start visit for %1$s now?</string>
    <string name="start_visit_unsuccessful_dialog_title" tools:ignore="MissingTranslation">Start New Visit</string>
    <string name="start_visit_unsuccessful_dialog_message" tools:ignore="MissingTranslation">There is an active visit for %1$s. You can cancel and return to the active visit, or close it and start a new one.</string>
    <string name="delete_patient_dialog_message" tools:ignore="MissingTranslation">Are you sure you want to delete this patient?</string>
    <string name="location_dialog_title" tools:ignore="MissingTranslation">Select Location</string>
    <string name="location_dialog_current_location" tools:ignore="MissingTranslation">Current location: </string>
    <string name="reset_dialog_message" tools:ignore="MissingTranslation">All patient information entered will be erased</string>
    <string name="dialog_button_cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="dialog_button_ok" translatable="false">OK</string>
    <string name="dialog_button_confirm" tools:ignore="MissingTranslation">Confirm</string>
    <string name="dialog_button_register_new" tools:ignore="MissingTranslation">Register new</string>
    <string name="dialog_button_merge" tools:ignore="MissingTranslation">Merge</string>
    <string name="action_next" tools:ignore="MissingTranslation">Next</string>
    <string name="dialog_button_select_location" tools:ignore="MissingTranslation">Select Location</string>
    <string name="settings_logs" tools:ignore="MissingTranslation">Logs</string>
    <string name="settings_concepts_in_db" tools:ignore="MissingTranslation">Concepts in DB:</string>
    <string name="settings_no_concepts_toast" tools:ignore="MissingTranslation">There are no concepts in DB!</string>
    <string name="action_find_patients" tools:ignore="MissingTranslation">Find Patients</string>
    <string name="action_synced_patients" tools:ignore="MissingTranslation">Synced Patients</string>
    <string name="action_download_patients" tools:ignore="MissingTranslation">Download Patients</string>
    <string name="action_add_patients" tools:ignore="MissingTranslation">Add Patients</string>
    <string name="systolic" tools:ignore="MissingTranslation">Systolic:</string>
    <string name="diastolic" tools:ignore="MissingTranslation">Diastolic:</string>
    <string name="heartRate" tools:ignore="MissingTranslation">Heart rate:</string>
    <string name="blood_pressure_diagram_content_description" tools:ignore="MissingTranslation">Blood Pressure device diagram</string>
    <string name="save_measurements_button_text" tools:ignore="MissingTranslation">Save measurements</string>
    <string name="weight_kg" tools:ignore="MissingTranslation">Kg</string>
    <string name="weight_name_text" tools:ignore="MissingTranslation">Weight: </string>
    <string name="blood_pressure_instructions_title" tools:ignore="MissingTranslation">Choosing the correct blood pressure cuff size</string>
    <string name="blood_pressure_instructions" tools:ignore="MissingTranslation">Measure the circumference of your upper arm with a cloth measuring tape midway between the elbow and shoulder. Choose a cuff size that includes this measurement</string>
    <string name="blood_pressure_instructions_title_two" tools:ignore="MissingTranslation">Position for taking your blood pressure at home</string>
    <string name="blood_pressure_instructions_two" tools:ignore="MissingTranslation">1.- Rest for 5 minutes before measuring your blood pressure. \n\n 2.- Sit in a chair with both feet flat on the ground and back straight.\n\n 3.- Place your arm at the level of your heart or chest.\n\n 4.- Stay still and do not talk as your blood pressure machine operates.</string>
    <string name="swipe_left_to_start" tools:ignore="MissingTranslation">Swipe left to start</string>
    <string name="call_doctor_banner_text" tools:ignore="MissingTranslation">Patient with severe hypertension. May require immediate hospitalization. Dr Xavier de las Cuevas has been notified by Telegram message. Please contact them as soon as possible.</string>
    <string name="call_button_text" tools:ignore="MissingTranslation">CALL</string>
    <string name="cancel_capitalized" tools:ignore="MissingTranslation">CANCEL</string>
    <string name="previously_recommended" tools:ignore="MissingTranslation">Previously \n recommended</string>
    <string name="new_recommendation" tools:ignore="MissingTranslation">Recommended \n today</string>
    <string name="medication" tools:ignore="MissingTranslation">Medication name</string>
    <string name="diuretic" tools:ignore="MissingTranslation">Diuretic</string>
    <string name="beta_blocker" tools:ignore="MissingTranslation">Beta blocker</string>
    <string name="ace_inhibitor" tools:ignore="MissingTranslation">ACE inhibitor</string>
    <string name="calcium_channel_blocker" tools:ignore="MissingTranslation">Calcium channel blocker</string>
    <string name="angiotensin_receptor_blocker" tools:ignore="MissingTranslation">ARA II</string>
    <string name="register_medication" tools:ignore="MissingTranslation">Finish</string>
    <string name="additional_notes" tools:ignore="MissingTranslation">Additional notes</string>
    <string name="medication_type" tools:ignore="MissingTranslation">Medication type</string>
    <string name="when_was_it_recommended" tools:ignore="MissingTranslation">When was it recommended?</string>
    <string name="doctors_name" tools:ignore="MissingTranslation">Doctor\'s name</string>
</resources>