<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:titleMarginStart="30dp"
        app:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_long">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/when_was_it_recommended"
            android:textColor="@color/black"
            app:fontWeight="500"
            android:textFontWeight="500"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/recommended_by_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/choose_option_error"
            android:textSize="@dimen/text_sm"
            android:layout_marginStart="4dp"
            android:textColor="@color/error_red"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/recommended_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/previously_recommended"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/treatment_buttons_on_unselected"
                android:drawableTop="@mipmap/icon_pill"
                android:focusable="true"
                android:paddingVertical="12dp"
                android:text="@string/previously_recommended"
                android:textAllCaps="false"
                android:textColor="@color/dark_grey" />

            <android.widget.Button
                android:id="@+id/new_recommendation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/treatment_buttons_on_unselected"
                android:clickable="true"
                android:drawableTop="@mipmap/ico_new_reco"
                android:focusable="true"
                android:paddingVertical="12dp"
                android:text="@string/new_recommendation"
                android:textAllCaps="false"
                android:textColor="@color/dark_grey" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_doctors_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doctors_name"
            android:orientation="horizontal"
            android:visibility="gone">

            <AutoCompleteTextView
                android:id="@+id/doctors_name_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/doctors_name_dropdown"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_medication_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/medication_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Medication name"
                android:focusable="true"
                android:hint="@string/medication"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/medication_type"
            android:textColor="@color/black"
            app:fontWeight="500"
            android:textFontWeight="500"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/medication_type_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/choose_options_error"
            android:textSize="@dimen/text_sm"
            android:layout_marginStart="4dp"
            android:textColor="@color/error_red"
            android:visibility="gone" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/medication_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="@dimen/margin_small">

            <com.google.android.material.chip.Chip
                android:id="@+id/diuretic"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/diuretic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/beta_blocker"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/beta_blocker" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ace_inhibitor"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/ace_inhibitor" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ara_ii"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/angiotensin_receptor_blocker" />

            <com.google.android.material.chip.Chip
                android:id="@+id/calcium_channel_blocker"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/calcium_channel_blocker" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/additional_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:gravity="top|start"
                android:hint="@string/additional_notes"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:lines="6"
                android:maxLength="2000"
                android:scrollHorizontally="false"
                android:autofillHints="@string/additional_notes"
                android:layout_marginBottom="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_medication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_medication"
            android:textColor="@color/white"
            android:textAllCaps="false" />
    </LinearLayout>

    </ScrollView>

</LinearLayout>