<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/call_doctor_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttons"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/call_doctor_banner_text" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/text_padding"
            android:text="@string/cancel_capitalized"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/text_padding"
            android:text="@string/call_button_text"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/dashboard_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>

