<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".scale.readScaleMeasurement.ReadWeightActivity">

        <include
            android:id="@+id/toolbar_include"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/weight_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_name_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weight_measurement_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/weight_name"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weight_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/weight_measurement_result"
                android:text="@string/weight_kg"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/send_weight_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_measurements_button_text"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>